add first implementation of publisheddata handler
